--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div id="loveModal" hidden>
   <div class="love-content">
     <h1>😈 Quase lá…</h1>
-    <p>Primeiro diga que <strong>me ama</strong> 💜</p>
+    <p>Primeiro diga o que <strong>sente por mim</strong> 💜</p>
 
     <div class="love-field">
       <input id="loveInput" type="text" placeholder='Digite aqui' autocomplete="off" />
